--- a/content/book/8/8.5.md
+++ b/content/book/8/8.5.md
@@ -4,21 +4,21 @@ metaTitle: '8.5. Двоичное дерево'
 metaDescription: '8.5. Двоичное дерево'
 ---
 
-8.5. Двоичное дерево
-«Идет направо - песнь заводит,
-
-налево – сказку говорит»
-
+<pre>
+«Идет направо - песнь заводит, <br/>
+налево – сказку говорит»<br/>
+<br/>
 А.С. Пушкин «Лукоморье»
+</pre>
 
-Упорядочение справа налево
+## Упорядочение справа налево
+
 В дереве с двумя потомками возможен еще один порядок обхода, который условно можно назвать «слева-направо»: сначала нумеруются вершины правого поддерева, затем корневая, а потом уже – левого. В принципе, алгоритмы, приведенные в 8.3 для дерева с упорядочением «сверху-вниз», можно использовать с небольшими изменениями: в рекурсивных алгоритмах меняются местами ветви, относящиеся к корневой вершине и левому поддереву. Поэтому здесь можно ограничиться лишь фрагментарными иллюстрациями
 
 
-рис. 85.1. Дерево с нумерацией вершин «справа-налево»
+![рис. 85.1. Дерево с нумерацией вершин «справа-налево»]./assets/085-01.png)
 
- 
-
+```cpp
 //--------------------------------------------------------------------85-01.cpp
 
 // Линейная СД на основе дерева с двумя потомками
@@ -61,11 +61,12 @@ tree2 *get_n(tree2 *p, int n){
 
 }                                   // Остаток – правом поддереве
 
+```
  
 
 При включении по логическом номеру замещение данных в текущей вершине производится с учетом изменившегося способа нумерации: если левое поддерево пустое, то новая вершина включается туда (логически – перед текущей), иначе содержимое текущей вершины сносится в правое поддерево с логическим номером 0 (логически – после текущей).
 
- 
+```cpp
 
 //--------------------------------------------------------------------85-01.cpp
 
@@ -152,22 +153,22 @@ void balance(tree2 *&ph){
             int ln=0; set(pp,ph,ln);
 
 ph=balance(pp,0,sz-1); }
+``` 
 
-Двоичное дерево
+## Двоичное дерево
+
 Нумерация «слева-направо» дает нам основу для  создания другого вида деревьев, включение в которые производится не по логическому номеру, а с учетом естественного упорядочения значений. Такое дерево называется деревом двоичного поиска или просто двоичным деревом. Основное свойство, рекурсивно соблюдаемое для всех поддеревьев,  звучит так: в левом поддереве каждой вершины содержатся значения, меньшие чем в корневой, а в правом – большие. Отсюда следуют все прочие свойства такового дерева:
 
 
+![рис. 85.2. Двоичное дерево]./assets/085-02.png)
 
+- обход двоичного дерева «слева-направо» соответствует порядку возрастания значений, хранящихся в нем;
 
-рис. 85.2. Двоичное дерево
+- поиск заданного значения в двоичном дереве использует линейно рекурсивный (или циклический) алгоритм. В каждой вершине производится сравнение с искомым значением (ключом). Если содержимое вершины совпадает и искомым, то вершина найдена. Если искомое значение меньше, то оно ищется в левом поддереве, иначе – в правом. Данный алгоритм очень сильно напоминает нам алгоритм двоичного поиска в массиве (см.4.6). Там одно сравнение выбирает половину интервала, здесь – поддерево;
 
--        обход двоичного дерева «слева-направо» соответствует порядку возрастания значений, хранящихся в нем;
+- включение нового значения в двоичного дерево также базируется на ветвлении: при сравнении включаемого значения со значением в текущей вершине выбирается правая или левая ветвь до тех пор, пока не встретится свободная.
 
--        поиск заданного значения в двоичном дереве использует линейно рекурсивный (или циклический) алгоритм. В каждой вершине производится сравнение с искомым значением (ключом). Если содержимое вершины совпадает и искомым, то вершина найдена. Если искомое значение меньше, то оно ищется в левом поддереве, иначе – в правом. Данный алгоритм очень сильно напоминает нам алгоритм двоичного поиска в массиве (см.4.6). Там одно сравнение выбирает половину интервала, здесь – поддерево;
-
--        включение нового значения в двоичного дерево также базируется на ветвлении: при сравнении включаемого значения со значением в текущей вершине выбирается правая или левая ветвь до тех пор, пока не встретится свободная.
-
- 
+```cpp
 
 //-------------------------------------------------------------------------------------------------85-02.cpp
 
@@ -240,6 +241,7 @@ void insert(btree *&p, char *ss){
                         insert(p->r,ss);
 
             }
+```
 
 Все остальные процедуры (извлечение и удаление по логическому номеру, обход, балансировка) идентичны предыдущему варианту – дереву с обходом «справа-налево». Но по своей природе двоичное дерево соответствует идее структурной упорядоченности данных. Эта упорядоченность присутствует с самом определении дерева. Поэтому простое включение последовательности значение в двоичное дерево уже является их сортировкой: для этого нужно просто сделать обход полученного дерева. Что же касается трудоемкости такого процесса, то она зависит от вида полученного дерева: если оно сбалансировано, то получаем T=Nlog2N, если вырождается в линейный список, то T=N2/2.
 
@@ -247,13 +249,13 @@ void insert(btree *&p, char *ss){
 
 Короче, хорошая идея на идеальных данных дает отвратительный результат (плюс на плюс дает минус).
 
-Двоичное дерево в массиве
+## Двоичное дерево в массиве
+
 Аналогично пирамиде, построенной в массиве для дерева, упорядоченного в глубину (см.8.4), двоичное дерево также можно спроецировать на линейный массив по принципу: корневая вершина с индексом n имеет левого и правого потомков с индексами 2n и 2n+1. При использовании динамического массива в процедуре включения данных в дерево необходимо перераспределять память при выходе алгоритма за его пределы.
 
 В данном примере для хранения упорядоченной последовательности строк используется массив указателей. Отсутствующие вершины обозначаются NULL-указателями. Аналогично, выход алгоритма за пределы массива обозначает отсутствие вершины.
 
- 
-
+```cpp
 //------------------------------------------------------85-03.cpp
 
 // Двоичное дерево в массиве (массив указателей на строки)
@@ -335,13 +337,14 @@ void insert(int n, char *ss){
             else                                                      // в зависимости от результата сравнения
 
                         insert(2*n+1, ss);}
+```
 
  
 
 Для балансировки двоичного дерева используется обход с сохранением упорядоченной последовательности в линейном массиве (массиве указателей). Затем массив рекурсивно делится пополам, а значение из середины интервала включается в новое дерево, которое получается сбалансированным.
 
  
-
+```cpp
 //------------------------------------------------------85-03.cpp
 
 //-- обход дерева с сохранением строк в линейном массиве
@@ -389,53 +392,44 @@ void balance(){
             balance(pp,0,sz1-1);
 
             }};
+``` 
 
- 
+## Лабораторный практикум
 
-Лабораторный практикум
 Программа должна содержать функцию  обхода дерева с выводом  его  содержимого,  функцию  добавления  вершины дерева  (ввод),  а  также  указанную  в  варианте  функцию.
 
-1.      Вершина двоичного дерева содержит  массив  целых  и  два указателя на правое  и  левое  поддерево.  Массив  целых  в каждом элементе упорядочен, дерево  в  целом  также  упорядочено.  Функция  включает  в  дерево  целую  переменную  с сохранением упорядоченности.
+1. Вершина двоичного дерева содержит  массив  целых  и  два указателя на правое  и  левое  поддерево.  Массив  целых  в каждом элементе упорядочен, дерево  в  целом  также  упорядочено.  Функция  включает  в  дерево  целую  переменную  с сохранением упорядоченности.
 
 
 
-2.      Элемент дерева содержит либо данные (строка текста), либо указатели на правое и левое поддеревья. Строки в дереве упорядочены в порядке обхода концевых вершин. Написать функцию включения новой строки. (Обратить внимание на то,  что  элемент  с  указателями  не содержит данных, и при включении новой вершины вершину с данными следует заменить на вершину с указателями).
+2. Элемент дерева содержит либо данные (строка текста), либо указатели на правое и левое поддеревья. Строки в дереве упорядочены в порядке обхода концевых вершин. Написать функцию включения новой строки. (Обратить внимание на то,  что  элемент  с  указателями  не содержит данных, и при включении новой вершины вершину с данными следует заменить на вершину с указателями).
 
+3. Вершина дерева содержит два целых числа и три  указателя на  поддеревья.  Данные  в  дереве  упорядочены.   Написать функцию включения нового значения в  дерево  с  сохранением упорядоченности.
 
+4. Вершина дерева содержит указатель на строку и N указателей на потомков. Функция помещает строки в дерево так, что строки с меньшей длиной располагаются ближе к корню. Если новая строка «проходит» через вершину, в которой находится более длинная строка, то новая занимает место старой, а алгоритм включения продолжается для старой строки. Функция включения выбирает потомка минимальным количеством вершин в поддереве.
 
-3.Вершина дерева содержит два целых числа и три  указателя на  поддеревья.  Данные  в  дереве  упорядочены.   Написать функцию включения нового значения в  дерево  с  сохранением упорядоченности.
+5. Вершина дерева содержит либо 4 целых значения, либо 2 указателя на потомков, причем концевые вершины содержат данные, а промежуточные - указатели на потомков. Естественная нумерация значений производится при обходе концевых вершин слева направо. Разработать функции получения и включения значения в дерево по логическому номеру.
 
+6. Вершина дерева содержит N целых значений и два указателя на потомков. Запись значений производится таким образом, что меньшие значения оказываются ближе к корню дерева (то есть все значения в поддеревьях больше самого большого значения у предка).  Разработать функции включения и поиска данных в таком дереве. Если новое значение «проходит» через вершину, в которой находится большее, то оно замещает большее значение, а для последнего алгоритм включения. Функция включения выбирает потомка максимальным значением в поддереве.
 
+7. Выражение, содержащее целые константы, арифметические операции и скобки, может быть представлено в виде двоичного дерева. Концевая вершина дерева должна содержать значение константы. Промежуточная - код операции и указатели на правый и левый  операнды - вершины дерева. Функция получает строку, содержащую выражение, и строит по ней дерево. Другая функция производит вычисления по полученному дереву.
 
- 
+8. Вершина дерева содержит  указатель на строку и динамический массив указателей на потомков. Размерность динамического массива в корневой вершине - N, на каждом следующем уровне - в 2 раза больше. Функция при включении строки создает  вершину, наиболее близкую к корню.
 
-4.      Вершина дерева содержит указатель на строку и N указателей на потомков. Функция помещает строки в дерево так, что строки с меньшей длиной располагаются ближе к корню. Если новая строка «проходит» через вершину, в которой находится более длинная строка, то новая занимает место старой, а алгоритм включения продолжается для старой строки. Функция включения выбирает потомка минимальным количеством вершин в поддереве.
+9. Вершина дерева содержит  указатель на строку и список указателей на потомков. Размерность списка в корневой вершине - N, на каждом следующем уровне - в 2 раза больше. Функция при включении строки создает  вершину, наиболее близкую к корню.
 
-5.      Вершина дерева содержит либо 4 целых значения, либо 2 указателя на потомков, причем концевые вершины содержат данные, а промежуточные - указатели на потомков. Естественная нумерация значений производится при обходе концевых вершин слева направо. Разработать функции получения и включения значения в дерево по логическому номеру.
+10. Вершина дерева содержит динамический массив целых значений и два указателя на потомков. Значения в дереве не упорядочены. Размерность динамического массива в корневой вершине - N, на каждом следующем уровне - в 2 раза больше. Функция включает новое значение в свободное место в массиве ближайшей к корню вершины.
 
- 
+11. Вершина  дерева содержит  массив  целых  и  два указателя на правое  и  левое  поддерево. Значения в дереве не упорядочены. Естественная нумерация значений производится путем обхода дерева по принципу «левое поддерево - вершина - правое поддерево». Разработать функции включения и получения значения элемента по заданному логическому номеру.
 
-6.      Вершина дерева содержит N целых значений и два указателя на потомков. Запись значений производится таким образом, что меньшие значения оказываются ближе к корню дерева (то есть все значения в поддеревьях больше самого большого значения у предка).  Разработать функции включения и поиска данных в таком дереве. Если новое значение «проходит» через вершину, в которой находится большее, то оно замещает большее значение, а для последнего алгоритм включения. Функция включения выбирает потомка максимальным значением в поддереве.
+12. Код Хаффмана, учитывающий частоты появления символов, строится следующим образом. Для каждого символа подсчитывается частота его появления и создается вершина двоичного дерева. Затем из множества вершин выбираются две с минимальными частотами появления и создается новая - с суммарной частотой, к которой выбранные подключаются как правое и левое поддерево. Созданная вершина включается в исходное множество, а выбранные - удаляются. Затем процесс повторяется до тех пор, пока не останется единственная вершина. Код каждого символа - это последовательность движения к его вершине от корня (левое поддерево - 0, правое - 1). Функция строит код Хаффмана для символов заданной строки.
 
-7.      Выражение, содержащее целые константы, арифметические операции и скобки, может быть представлено в виде двоичного дерева. Концевая вершина дерева должна содержать значение константы. Промежуточная - код операции и указатели на правый и левый  операнды - вершины дерева. Функция получает строку, содержащую выражение, и строит по ней дерево. Другая функция производит вычисления по полученному дереву.
+## Вопросы без ответов
 
-8.      Вершина дерева содержит  указатель на строку и динамический массив указателей на потомков. Размерность динамического массива в корневой вершине - N, на каждом следующем уровне - в 2 раза больше. Функция при включении строки создает  вершину, наиболее близкую к корню.
-
-9 .  Вершина дерева содержит  указатель на строку и список указателей на потомков. Размерность списка в корневой вершине - N, на каждом следующем уровне - в 2 раза больше. Функция при включении строки создает  вершину, наиболее близкую к корню.
-
-10.  Вершина дерева содержит динамический массив целых значений и два указателя на потомков. Значения в дереве не упорядочены. Размерность динамического массива в корневой вершине - N, на каждом следующем уровне - в 2 раза больше. Функция включает новое значение в свободное место в массиве ближайшей к корню вершины.
-
-11.  Вершина  дерева содержит  массив  целых  и  два указателя на правое  и  левое  поддерево. Значения в дереве не упорядочены. Естественная нумерация значений производится путем обхода дерева по принципу «левое поддерево - вершина - правое поддерево». Разработать функции включения и получения значения элемента по заданному логическому номеру.
-
-12.  Код Хаффмана, учитывающий частоты появления символов, строится следующим образом. Для каждого символа подсчитывается частота его появления и создается вершина двоичного дерева. Затем из множества вершин выбираются две с минимальными частотами появления и создается новая - с суммарной частотой, к которой выбранные подключаются как правое и левое поддерево. Созданная вершина включается в исходное множество, а выбранные - удаляются. Затем процесс повторяется до тех пор, пока не останется единственная вершина. Код каждого символа - это последовательность движения к его вершине от корня (левое поддерево - 0, правое - 1). Функция строит код Хаффмана для символов заданной строки.
-
- 
-
-Вопросы без ответов
 Определить по тесту способ представления дерева (массив с индексами потомков,  массив с вычисляемыми индексами потомков, ветвящийся список, вершина с массивом указателей на потомков). Определить дерево в виде статической структуры данных (инициализированные переменные) и написать для нее вызов функции, заданной в тесте. Содержательно сформулировать результат ее выполнения и обосновать полученное при вызове функции значение.
 
  
-
+```cpp
 //------------------------------------------------------85-xx.cpp
 
 struct ltree{
@@ -819,5 +813,4 @@ int F33(int A[],int sz, int n){
             int x2=F33(A,sz,2*n+1);
 
             return x1>x2 ? x1+1 : x2+1; }
-
- 
+```
